--- a/index.html
+++ b/index.html
@@ -2,11 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ระบบข้อสอบอย่างง่าย Simple Quiz</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="profile-detail">
+        <h1>HOMEWORK#2</h1>
+    <div class="quiz-container">
+
+        <p id="question">PIM ย่อมาจากอะไร ?</p>
+        <button class="button" onclick="checkAnswer('a')">A) พีไอเอ็ม</button>
+        <button class="button" onclick="checkAnswer('b')">B) ปิ๋ม</button>
+        <button class="button" onclick="checkAnswer('c')">C) พิม</button>
+        <button class="button" onclick="checkAnswer('d')">D) ภีม</button>
+        <p id="result"></p>
+    </div>
+    <br />
+    <div class="quiz-container">
+
+        <p id="question">CPR ย่อมาจากอะไร ?</p>
+        <button class="button" onclick="checkAnswer2('a')">A) CP RETAILINK</button>
+        <button class="button" onclick="checkAnswer2('b')">B) COMPANY RELATIONSHIP</button>
+        <button class="button" onclick="checkAnswer2('c')">C) Cardio Pulmonary Resuscitation</button>
+        <button class="button" onclick="checkAnswer2('d')">D) CP RAM</button>
+        <p id="result2"></p>
+    </div>
+    <br />
+    
+    <p id="result3"></p>
+</div>
+    
+    <script src="script.js"></script>
+</body>
+</html>
+
+<!--<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>CPR Quiz</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="profile-detail">
+        <h1>HOMEWORK #2</h1>
+    <div class="quiz-container">
+        <p id="question">PIM ย่อมาจากอะไร ?</p>
+        <button class="button" onclick="checkAnswer('a')">A) พีไอเอ็ม</button>
+        <button class="button" onclick="checkAnswer('b')">B) ปิ๋ม</button>
+        <button class="button" onclick="checkAnswer('c')">C) พิม</button>
+        <button class="button" onclick="checkAnswer('d')">D) ภีม</button>
+        <p id="result"></p>
+    </div>
+    <br/>
     <div class="quiz-container">
         <h1></h1>
         <p id="question">CPR ย่อมาจากอะไร ?</p>
